Fixed nav to display vertically on small-large screens on moons.html and index.html

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,12 @@ footer {
 .venus {
 	text-align: left;
 }
+
+.nav li {
+	display: inline-block;
 }
+}
+
 
 @media only screen and (min-width: 38em) {
 
